--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 Django==5.0.1
+django-cors-headers==4.3.1
+django-htmx==1.17.2
 psycopg2-binary==2.9.9
 sqlparse==0.4.4
 typing_extensions==4.9.0
